--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,5 @@
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
+/>
 <my-app>loading</my-app>
